# ta

./: .gitignore  AKUZ.anno.tab  GOHSU_genelist.tab_anno.tab.org  KeyWordsByUniprotBeforeWithOrWithoutNITEBefore.txt  KeyWordsByUniprotBeforeWithOrWithoutNITEBefore4Xsquare.txt  KeyWordsByUniprotBeforeWithOrWithoutNITEBefore4Xsquare2nd.txt  README.md  SG25アノテーション確認用_After_10.txt  TypeCalculate.xlsx  annotation.psgi  count4venn.pl  dfast2dict.rb  dict_cyanobacteria_curated.txt  eval_w_UniProt.pl  gen_unique_pairs.pl  get_pairs.pl  lee_check.pl  load_dict4es.pl  locus_tag_prefix.txt  match.pl  match_protein_names.pl  match_protein_names_RDF.pl  mkDictionary.pl  mpn.pl  mpn_RDF.pl  mpn_cyano.pl  mpn_cyano_v2.pl  mpn_test.pl  nite_ALL_130517.txt  nite_ALL_1305_99.txt  nite_ALL_1305_99p.txt  nite_dictionary_140519.xlsx  nite_dictionary_140519mod2.txt  nite_dictionary_140519mod2_trailSpaceRemoved.txt  rdfize.pl  result.json  result.txt  test_togo_query.pl  tfujiMatchProtein.pl  tm_togo_query.sh  (+5 more)
20131122_dbcls/: GONAM_genelist.tab_anno.tab.org  GS4_genelist.tab_anno_eco.tab.org  (+2 more)
ReconciliationServiceAPI/: .coveragerc  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ReconciliationServiceAPI/src/: requirements.txt  server.py
ReconciliationServiceAPI/src/es/: esaccessor.py  query.json
ReconciliationServiceAPI/src/models/: reconciliation.py
ReconciliationServiceAPI/src/tests/: test_server.py  test_utils.py
ReconciliationServiceAPI/src/tests/es/: test_esaccessor.py
ReconciliationServiceAPI/src/utils/: logging.py  utils.py
Text/: TogoAnnotator.pm  (+1 more)
(+222 files in other folders)
