[tool.poetry]
name = "reconciliation-api-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
elasticsearch = "^7.13.1"
loguru = "^0.5.3"
uvicorn = "^0.14.0"
typing-extensions = "^3.10.0"
numpy = "^1.20.3"
sklearn = "^0.0"
python-multipart = "^0.0.5"
requests = "^2.25.1"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
